# toad

./: .gitignore  CHANGELOG.md  Makefile  README.md  agent.jsonl  box_test.py  main.py  pyproject.toml  test_input.py
src/toad/: ansi.py  app.py  cli.py  code_analyze.py  gist.py  main_screen.py  settings.py  shell.py  shell_read.py  toad.tcss
src/toad/acp/: agent.py  messages.py  protocol.py
src/toad/ansi/: __init__.py  _ansi.py  _stream_parser.py
src/toad/screens/: main.py  settings.py  store.py
src/toad/visuals/: columns.py
src/toad/widgets/: agent_response.py  agent_thought.py  ansi_log.py  command_pane.py  conversation.py  explain.py  future_text.py  grid_select.py  menu.py  plan.py  prompt.py  question.py  side_bar.py  terminal.py  terminal_tool.py  user_input.py  version.py  welcome.py
