[project]
name = "toad"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "textual[syntax]>=6.4.0",
    "textual-speedups>=0.2.0",
    "click>=8.2.1",
    "gitpython>=3.1.44",
    "llm>=0.26",
    "tree-sitter>=0.24.0",
    "httpx>=0.28.1",
    "platformdirs>=4.3.8",
    "rich",
    "typeguard>=4.4.4",
]

[tool.uv.workspace]
members = [
    "toad",
]

[tool.uv.sources]
#textual = { path = "../textual", editable = true }
#rich = { path = "../rich", editable = true }

[project.scripts]
toad = "toad.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyinstrument>=5.1.1",
    "textual-dev>=1.8.0",
]
