[project]
name = "toad"
version = "0.2.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "textual[syntax]>=6.8.0",
    "click>=8.2.1",
    "gitpython>=3.1.44",
    "tree-sitter>=0.24.0",
    "httpx>=0.28.1",
    "platformdirs>=4.3.8",
    "rich",
    "typeguard>=4.4.4",
    "xdg-base-dirs>=6.0.2",
    "textual-serve>=1.1.2",
    "textual-speedups==0.2.1",
]

[tool.uv.workspace]
members = [
    "toad",
]

[tool.uv.sources]
#textual-serve = { path = "../textual-serve", editable = true }
#textual = { path = "../textual", editable = true }
#textual-dev = { path = "../textual-dev", editable = true }
#rich = { path = "../rich", editable = true }

[project.scripts]
toad = "toad.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyinstrument>=5.1.1",
    "textual-dev>=1.8.0",
]
